<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_project_menu_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="horizontal">


    <ImageButton
        android:id="@+id/close_selected_item_action_menu_ib"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@null"
        android:contentDescription="@string/close_menu"
        android:src="@drawable/ic_baseline_close_24"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/selected_item_count_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:fontFamily="@font/cabin_sketch"
        android:paddingStart="25dp"
        android:paddingEnd="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="1 Selected" />

    <ImageButton
        android:id="@+id/share_selected_items_ib"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="12"
        android:background="@null"
        android:contentDescription="@string/share_image_button"
        android:src="@drawable/ic_baseline_person_add_alt_1_24"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/delete_selected_items_ib"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="12"
        android:background="@null"
        android:contentDescription="@string/delete_selected_items"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/optionsMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:background="@null"
        android:contentDescription="@string/more_options"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:tint="@color/white" />


</LinearLayout>
