<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        >
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/search_icon"
            app:tint="@color/pencil_grey"
            />
        <ImageView
            android:id="@+id/app_icon"
            android:layout_marginStart="5dp"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@mipmap/clipboard_icon"
            android:contentDescription="@string/app_icon" />
        <EditText
            android:id="@+id/search_edit_text"
            android:layout_marginStart="40dp"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:autofillHints="Search For Friends..."
            android:hint="@string/search_for_friends"
            android:inputType="text"
            android:textSize="20sp"
            android:fontFamily="@font/cabin_sketch"
            android:textColor="@color/black"
            android:background="@null"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/app_yellow" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/search_recycler_view"
        tools:listitem="@layout/searchable_profile_item"
        />

</LinearLayout>